--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@ window.google_analytics_uacct = "UA-1077041-22";
 <div class="clearfix"></div>
 <span class="author">Chrome App by <a href="http://kaistudios.com" target="_blank"><strong>kaistudios.com</strong></a><img src="img/balloon-twitter-left.png">follow <a href="https://twitter.com/kaistudios" target="_blank">kaistudios</a></span>
 <div class="clearfix"></div>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-0857875662564322";
+/* Apps */
+google_ad_slot = "7703977079";
+google_ad_width = 320;
+google_ad_height = 50;
+//-->
+</script>
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </body>
 </html>
