--- a/index.html
+++ b/index.html
@@ -12,27 +12,34 @@ window.google_analytics_uacct = "UA-1077041-22";
 </script>
 </head>
 <body>
-<div class="header"><h1>Live Sports Streams &amp; Scores</h1>
-</div>
+<!--<div class="header"><h1>Live Sports Streams &amp; Scores</h1>
+</div>-->
 <div class='tabs'>
   <ul>
-<!--<li id="main" title="Live Sports">Live Sports Feed</li>-->
-<li id="stream" title="Live Sports"><img src="img/live_sports.png" width="32" height="32"></li>
-<li id="stream2" title="Live Sports2"><img src="img/live_sports.png" width="32" height="32"></li>
-<li id="score" title="Soccer Live Scores"><img src="img/soccer.png" width="32" height="32"></li>
-<li id="basketball" title="Basketball Live Scores"><img src="img/basketball.png" width="32" height="32"></li>
-<li id="football" title="Football Live Scores"><img src="img/football.png" width="32" height="32"></li>
-<li id="baseball" title="Baseball Live Scores"><img src="img/baseball.png" width="32" height="32"></li>
-<li id="tennis" title="Tennis Live Scores"><img src="img/tennis.png" width="32" height="32"></li>
-<li id="cricket" title="Cricket Live Scores"><img src="img/cricket.png" width="32" height="32"></li>
-<li id="hockey" title="Hockey Live Scores"><img src="img/hockey.png" width="32" height="32"></li><li id="racing" title="Racing Live Scores"><img src="img/racing.png" width="32" height="32"></li>
+<!--<li id="main" title="Live Sports">Live Sports Feed</li>
+<li id="stream2" title="Live Sports2"><img src="img/live_sports.png" width="32" height="32"></li>-->
+<li id="score" title="Soccer Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Soccer')"><img src="img/soccer.png" width="32" height="32"></li>
+<li id="worldcup" title="World Cup Center" onclick="_gaq.push(['_trackPageview','internal-links/World-Cup')"><img src="img/Fifa-World-Cup.jpg" width="32" height="32"></li>
+<li id="basketball" title="Basketball Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Basketball')"><img src="img/basketball.png" width="32" height="32"></li>
+<li id="football" title="Football Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Football')"><img src="img/football.png" width="32" height="32"></li>
+<li id="baseball" title="Baseball Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Baseball')"><img src="img/baseball.png" width="32" height="32"></li>
+<li id="tennis" title="Tennis Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Tennis')"><img src="img/tennis.png" width="32" height="32"></li>
+<li id="cricket" title="Cricket Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Cricket')"><img src="img/cricket.png" width="32" height="32"></li>
+<li id="hockey" title="Hockey Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Hockey')"><img src="img/hockey.png" width="32" height="32"></li>
+<li id="golf" title="Golf Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Golf')"><img src="img/golf.png" width="32" height="32"></li>
+<li id="racing" title="Racing Live Scores" onclick="_gaq.push(['_trackPageview','internal-links/Racing')"><img src="img/racing.png" width="32" height="32"></li>
+<li id="stream" title="Live Sports Streams" onclick="_gaq.push(['_trackPageview','internal-links/Streams')"><img src="img/live_sports.png" width="32" height="32"></li>
   </ul>
-  <br style='clear:both;'>
 </div>
-<div id="frame-div"></div>
+<br style='clear:both;'>
+<div id="wrapper">
+<div id="content">
+<div id="frame-div" align="center"></div><br>
 <div class="clearfix"></div>
-<span class="author">Chrome App by <a href="http://kaistudios.com" target="_blank"><strong>kaistudios.com</strong></a><img src="img/balloon-twitter-left.png">follow <a href="https://twitter.com/kaistudios" target="_blank">kaistudios</a></span>
-<div class="clearfix"></div>
+<!--<span class="author">Chrome App by <a href="http://kaistudios.com" target="_blank"><strong>kaistudios.com</strong></a><img src="img/balloon-twitter-left.png">follow <a href="https://twitter.com/kaistudios" target="_blank">kaistudios</a> 
+Scores by <a target="_blank" rel="nofollow" href="http://www.whatsthescore.com">WhatstheScore.com</a></span>
+<div class="clearfix"></div><br>-->
+<SCRIPT type="text/javascript" LANGUAGE="javascript" src="http://www.qksz.net/1e-lu1g"> </SCRIPT>
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-0857875662564322";
 /* Apps */
@@ -43,6 +50,45 @@ google_ad_height = 50;
 </script>
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+</script></div>
+<div class="sense_cont">
+  <div class="sense"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Apps side -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:234px;height:60px"
+     data-ad-client="ca-pub-0857875662564322"
+     data-ad-slot="9807675474"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+  <div class="sense"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Apps side -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:234px;height:60px"
+     data-ad-client="ca-pub-0857875662564322"
+     data-ad-slot="9807675474"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+  <div class="sense"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Apps side -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:234px;height:60px"
+     data-ad-client="ca-pub-0857875662564322"
+     data-ad-slot="9807675474"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+<div class="sense"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Apps side -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:234px;height:60px"
+     data-ad-client="ca-pub-0857875662564322"
+     data-ad-slot="9807675474"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+</div>
+</div>
 </body>
 </html>
