--- a/options.html
+++ b/options.html
@@ -7,21 +7,27 @@
 
 <body class="options">
 <h1>Live Sports Extension Options</h1>
-<!--<div>Favorite Color:
+<div>Favorite Color:
 <select id="color">
  <option value="home">home</option>
  <option value="away">away</option>
 </select></div>
-<br>-->
+<br>
 <div id="bumbleAd" data-bumblead-text="disable ads"></div>
 <br>
 <div id="status"></div>
 <button id="save">Save</button>
 
 <div class="clearfix"></div>
-<span class="author">Chrome App by <a href="http://kaistudios.com" target="_blank"><strong>kaistudios.com</strong></a> <img src="img/balloon-twitter-left.png">follow <a href="https://twitter.com/kaistudios" target="_blank">kaistudios</a></span><br><br>
-<span class="author"><strong>Got feature suggestions?</strong> <br>Drop me a message on twitter <a href="https://twitter.com/kaibarzilai">Kai</a>.</span>
+<span class="author">Chrome App by <a href="http://kaistudios.com" target="_blank"><strong>kaistudios.com</strong></a> <img src="img/balloon-twitter-left.png">follow <a href="https://twitter.com/kaistudios" target="_blank">kaistudios</a><br>
+scores by <a target="_blank" rel="nofollow" href="http://www.whatsthescore.com">WhatstheScore.com</a><strong> Got suggestions?</strong> Message me on twitter <a href="https://twitter.com/kaibarzilai">Kai</a>.</span>
 <div class="clearfix"></div>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="2F8PUWK2YKT6E">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 </body>
 
 <script src="js/options.js"></script>
